V1 and V2 for multithreading

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,9 +13,10 @@
                 "-I${workspaceFolder}/include",
                 "src/main.cpp",
                 "src/Board.cpp",
-                //"src/MultiThreadSolver.cpp",
                 "src/SequentialSolver.cpp",
                 "src/SingleThreadSolver.cpp",
+                //"src/MultiThreadSolverV1.cpp",
+                "src/MultiThreadSolverV2.cpp",
                 "src/Timer.cpp",
                 "-o",
                 "${workspaceFolder}\\sudoku_solver.exe"
