new version of multithreading

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,10 +14,7 @@
                 "src/main.cpp",
                 "src/Board.cpp",
                 "src/SequentialSolver.cpp",
-                "src/SingleThreadSolver.cpp",
-                "src/MultiThreadSolverV1.cpp",
-                "src/MultiThreadSolverV2.cpp",
-                "src/MultiThreadSolverV3.cpp",
+                "src/MultiThreadSolver.cpp",
                 "src/Timer.cpp",
                 "-o",
                 "${workspaceFolder}\\sudoku_solver.exe"
